[package]
name = "min-max-heap"
version = "1.1.2-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "An efficient, double-ended priority queue"
repository = "https://github.com/tov/min-max-heap-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["heap", "priority-queue"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.3"

[package.metadata.docs.rs]
features = ["serde"]

