[package]
name = "min-max-heap"
version = "1.3.1-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "An efficient, double-ended priority queue"
repository = "https://github.com/tov/min-max-heap-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["heap", "priority-queue"]
categories = ["data-structures"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.8"
quickcheck = "0.9"

[package.metadata.docs.rs]
features = ["serde"]

